[package]
name = "deanonymize-macro"
version = "0.0.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
description = "The macro part of deanonymize"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"]}
itertools = "0.10.0"
